bazel_dep(name = "asset-fuse", version = "0.0.0")
local_path_override(
    module_name = "asset-fuse",
    path = "../..",
)

fuse = use_extension("@asset-fuse//bzl:fuse.bzl", "fuse")
fuse.mount(
    name = "dataset",
    manifest = "//:manifest.json",
    mountpoint = "mnt",
    # Set this to True to enforce
    # using asset-fs.
    # The default (False) works on any OS
    # and in any environment, but may use Bazel's
    # downloader if the filesystem is not mounted.
    strict = False,
)
use_repo(fuse, "dataset")
