http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "air_quality_csv",
    downloaded_file_path = "Air_Quality.csv",
    integrity = "sha256-MDZ/E7dxGRCaTQqqxfdehYhah9VltiO0Va+DFlcRXug=",
    urls = ["https://data.cityofnewyork.us/api/views/c3uy-2p5r/rows.csv?accessType=DOWNLOAD"],
)
